cmake_minimum_required(VERSION 3.8)
project(MRT)
set(CMAKE_CXX_STANDARD 11)
set(SOURCE_FILES src/main.cpp src/Route.cpp src/Route.hpp src/Map.cpp src/Map.hpp src/Tourist.cpp src/Tourist.hpp src/Location.cpp src/Location.hpp src/Algorithms/Metaheuristic.cpp src/Algorithms/Metaheuristic.hpp src/Loader.hpp src/Algorithms/SimulatedAnnealing.cpp src/Algorithms/SimulatedAnnealing.hpp)
add_executable(MRT ${SOURCE_FILES} src/Algorithms/SimulatedAnnealing.cpp src/Algorithms/SimulatedAnnealing.hpp)