cmake_minimum_required(VERSION 3.8)
project(MRT)
set(CMAKE_CXX_STANDARD 11)
set(SOURCE_FILES src/main.cpp src/Basis/Route.cpp src/Basis/Route.hpp src/Basis/Map.cpp src/Basis/Map.hpp src/Basis/Tourist.cpp src/Basis/Tourist.hpp src/Basis/Location.cpp src/Basis/Location.hpp src/Algorithms/Metaheuristic.cpp src/Algorithms/Metaheuristic.hpp src/Handlers/Loader.hpp src/Algorithms/SimulatedAnnealing.cpp src/Algorithms/SimulatedAnnealing.hpp)
add_executable(MRT ${SOURCE_FILES} )